# momento

./: .gitattributes  .gitignore  .lintstagedrc.yaml  .prettierignore  COPYRIGHT  LICENSE  README.md  ai-comparison-test.py  debug-marco-columns.py  memory-marco-comparison.py  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  ruff.toml  start-enhanced.sh  start-system.sh  test-marco-comparison.py  typedoc.json
.build/: local.docker-compose.yaml
.build/db/: init.sql
.github/workflows/: build.yaml  deploy.yaml
.husky/: post-checkout  post-commit  post-merge  pre-commit  pre-push
docs/: README.md
docs/api/: py.md
docs/assets/: style.css
docs/protos/: readme_link.md
sample_personal_memory_dataset/: memories.csv  queries.csv  relevance.csv
