[project]
name = "uzh-masterproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.71.2",
    "protobuf==5.29.5",
]

[tool.uv.sources]
protos = { workspace = true }
torch = [
  { index = "pytorch-cpu" },
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/web"]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true