[project]
name = "uzh-masterproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.71.2",
    "numpy>=2.3.2",
    "protobuf==5.29.5",
    "api",
    "evaluation",
    "protos",
]

[tool.uv.sources]
protos = { workspace = true }
api = { workspace = true }
evaluation = { workspace = true }
torch = [
  { index = "pytorch-cpu" },
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/web"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["packages/api"]
testpaths = ["packages/api/tests"]
