[project]
name = "uzh-masterproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.71.2",
    "numpy>=2.3.2",
    "protobuf==5.29.5",
    "api",
    "evaluation",
    "protos",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
protos = { workspace = true }
api = { workspace = true }
evaluation = { workspace = true }
torch = [
  { index = "pytorch-cpu" },
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/web"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["packages/api"]
testpaths = ["packages/api/tests"]
